
* Added DeepImageWriter abstract base class for writing deep images.

* Added IECoreHoudini::RATDeepImageReader to read Houdini deep texture files. Supports Deep Camera Maps and Deep Shadow Maps.

* Added IECoreHoudini::RATDeepImageWriter to write Houdini deep texture files. 

Improvements :

Changes :

Bug Fixes :

Cortex 6.2.0
============

Additions :

* Added DeepPixel to represent arbitrary channel data stored at varying depths in space.

Changes :

* Added face-varying color conversion in FromMayaMeshConverter.

* Added custom space input to FromMayaTransformConverter.

* Allocated a TypeId range for use in the Gaffer project.

* Changed minSequenceSize to 1 for FileSequenceParameters in common sequence utility ops (Sequence*Op)

Bug fixes :

* SOP_ParameterisedHolder properly handles the GIL before using the CapturingRenderer.

* Fixed crashes which could be triggered by passing a python unicode string with non-ascii characters into Cortex.

* Fixed bug with conversion of normals in ToMayaMeshConverter.

Cortex 6.1.2
============

Additions :

* IECoreGL::Renderer class now supports the "gl:visibility:camera" attribute.

Bug fixes :

* PointDistributionOp density parameter no longer accepts negative values.

* RelativePreset was creating unnecessary data for empty class parameters and not working if there was no differences at all.

* Fixed a maya 2010 crash triggered by deep levels of nesting in parameter uis.

* Fixed a bug in the IECoreRI::Renderer, causing incorrect results when querying projection matricies

Cortex 6.1.1
============

Additions :

* Added support in python for the minSequenceSize argument for IECore.findSequence function. Defaults to 2, which was the original behaviour.

Improvements :

Changes :

* SOP_InterpolatedCache attempts to account for doubled endpoints from CurvesPrimitives when applying a cache.

Bug Fixes :

* ToHoudiniCurvesConverter returns false rather than a seg fault when asked to convert and un-buildable curve.
