@@ -1,0 +1,76 @@
+//////////////////////////////////////////////////////////////////////////
+//
+//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//
+//  Redistribution and use in source and binary forms, with or without
+//  modification, are permitted provided that the following conditions are
+//  met:
+//
+//     * Redistributions of source code must retain the above copyright
+//       notice, this list of conditions and the following disclaimer.
+//
+//     * Redistributions in binary form must reproduce the above copyright
+//       notice, this list of conditions and the following disclaimer in the
+//       documentation and/or other materials provided with the distribution.
+//
+//     * Neither the name of Image Engine Design nor the names of any
+//       other contributors to this software may be used to endorse or
+//       promote products derived from this software without specific prior
+//       written permission.
+//
+//  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+//  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+//  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+//  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+//  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+//  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+//  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+//  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+//  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+//  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+//  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+//
+//////////////////////////////////////////////////////////////////////////
+
+#ifndef IECORE_DEEPIMAGECONVERTER_H
+#define IECORE_DEEPIMAGECONVERTER_H
+
+#include "IECore/Op.h"
+
+namespace IECore
+{
+
+IE_CORE_FORWARDDECLARE( FileNameParameter );
+
+/// The DeepImageConverter provides a simplified process for converting deep image files
+/// from one format to another. It reads any file supported by DeepImageReader and writes
+/// the data to any file supported by DeepImageWriter.
+/// \todo: should this operate on a FileSequence rather than a single file?
+/// \ingroup deepCompositingGroup
+/// \ingroup ioGroup
+class DeepImageConverter : public Op
+{
+	public:
+
+		IE_CORE_DECLARERUNTIMETYPED( DeepImageConverter, Op );
+
+		DeepImageConverter();
+		virtual ~DeepImageConverter();
+
+	protected :
+
+		virtual ObjectPtr doOperation( const CompoundObject *operands );
+
+	private :
+
+		FileNameParameterPtr m_inputFileParameter;
+		FileNameParameterPtr m_outputFileParameter;
+
+};
+
+IE_CORE_DECLAREPTR( DeepImageConverter );
+
+} // namespace IECore
+
+#endif // IECORE_DEEPIMAGECONVERTER_H
+
