@@ -299,6 +299,7 @@
 #include "IECorePython/DeepPixelBinding.h"
 #include "IECorePython/DeepImageReaderBinding.h"
 #include "IECorePython/DeepImageWriterBinding.h"
+#include "IECorePython/DeepImageConverterBinding.h"
 
 #include "IECore/IECore.h"
 
@@ -603,6 +604,7 @@ BOOST_PYTHON_MODULE(_IECore)
 	bindDeepPixel();
 	bindDeepImageReader();
 	bindDeepImageWriter();
+	bindDeepImageConverter();
 	
 	def( "majorVersion", &IECore::majorVersion );
 	def( "minorVersion", &IECore::minorVersion );
